--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 :root {
    --theme-header: lightgray;
    --theme-sidebar: rgb(235, 235, 235);
+   --theme-border: black;
 }
 
 * {
@@ -24,13 +25,13 @@ body > header {
 body > main {
    display: flex;
    flex: 1;
-   border-top: solid black 1px;
+   border-top: solid var(--theme-border) 1px;
 }
 
 body > main > nav {
    display: flex;
    flex-flow: column;
-   border-right: solid black 1px;
+   border-right: solid var(--theme-border) 1px;
    gap: 16px;
    flex-basis: 200px;
    padding: 24px;
