--- a/src/styles.css
+++ b/src/styles.css
@@ -39,13 +39,13 @@ body > main > nav {
    background: var(--theme-sidebar);
 }
 
-body > main > nav > nav {
+body > main > nav > ul {
    display: flex;
    flex-flow: column;
    gap: 12px;
 }
 
-body > main > nav > nav > button {
+body > main > nav > ul > button {
    text-align: start;
    border: none;
    background: none;
@@ -58,11 +58,11 @@ body > main > nav > nav > button {
    transition: color 0.15s, background-color 0.15s;
 }
 
-body > main > nav > nav > button:hover {
+body > main > nav > ul > button:hover {
    color: black;
 }
 
-body > main > nav > nav > button[data-selected] {
+body > main > nav > ul > button[data-selected] {
    color: white;
    background: var(--theme-selected);
 }
