Add focus-visible selector to unselected projects

--- a/src/styles.css
+++ b/src/styles.css
@@ -109,7 +109,8 @@ body > main > nav > ul > button.project > div {
    white-space: nowrap;
 }
 
-body > main > nav > ul .project:hover {
+body > main > nav > ul .project:hover,
+body > main > nav > ul .project:focus-visible {
    color: var(--theme-text);
 }
 
