--- a/src/styles.css
+++ b/src/styles.css
@@ -17,10 +17,10 @@
    margin: 0;
    color: var(--theme-text);
    box-sizing: border-box;
+   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
-   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    display: flex;
    flex-flow: column;
    min-height: 100vh;
@@ -62,9 +62,10 @@ body > main > nav > header > button {
    background: none;
    border-radius: 100%;
    font-size: 120%;
-   width: 36px;
+   height: 44px;
    aspect-ratio: 1;
    padding: 6px;
+   padding-bottom: 10px;
    cursor: pointer;
    transition: border-color 150ms, background-color 150ms, color 150ms, opacity 150ms;
 }
@@ -72,7 +73,7 @@ body > main > nav > header > button {
 body > main > nav > header > button:hover {
    color: var(--theme-selected-project-text);
    background: var(--theme-selected-project-background);
-   border: none;
+   border: var(--theme-selected-project-background);
 }
 
 body > main > nav > header > button:active {
@@ -99,7 +100,7 @@ body > main > nav > ul > li > button.delete {
    border: none;
    background: none;
    border-radius: 100%;
-   flex-basis: 37px;
+   height: 44px;
    aspect-ratio: 1;
    cursor: pointer;
    opacity: 0;
@@ -126,16 +127,7 @@ body > main > nav > ul > li > .project + button.delete:active {
 
 body > main > nav > ul > li > form {
    display: flex;
-   flex-flow: column;
    width: 100%;
-}
-
-body > main > nav > ul > li > form > input {
-   width: 100%;
-}
-
-body > main > nav > ul > li > button.project {
-   width: 80%;
 }
 
 body > main > nav > ul .project {
