--- a/src/styles.css
+++ b/src/styles.css
@@ -203,8 +203,9 @@ body > main > nav > ul .project.selected::selection {
 }
 
 body > main > ul.tasks {
+   --task-size: 200px;
+   --task-layout: repeat(auto-fill, var(--task-size));
    display: grid;
-   --task-layout: repeat(auto-fill, 200px);
    grid-template: var(--task-layout) / var(--task-layout);
    padding: 24px;
    gap: 24px;
@@ -221,6 +222,7 @@ body > main > ul.tasks.hidden {
 body > main > ul.tasks > li {
    display: flex;
    border: solid var(--theme-border) 1px;
+   height: var(--task-size);
    padding: 24px;
    border-radius: 24px;
 }
