Add hover effect to focus-visible on add task button

--- a/src/styles.css
+++ b/src/styles.css
@@ -288,7 +288,8 @@ body > main > ul.tasks > li.add-task > button {
    border-radius: inherit;
 }
 
-body > main > ul.tasks > li.add-task > button:hover {
+body > main > ul.tasks > li.add-task > button:hover,
+body > main > ul.tasks > li.add-task > button:focus-visible {
    background: var(--theme-sidebar);
 }
 
