--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,17 @@
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.circle {
+   aspect-ratio: 1;
+   border-radius: 100%;
+}
+
+button {
+   border: none;
+   background: none;
+   cursor: pointer;
+}
+
 body {
    display: flex;
    flex-flow: column;
@@ -61,16 +72,11 @@ body > main > nav > header {
 }
 
 body > main > nav > header > button {
-   border: none;
    box-shadow: 0 0 2px 0 var(--theme-border);
-   background: none;
-   border-radius: 100%;
    font-size: 1.2rem;
    height: 44px;
-   aspect-ratio: 1;
    padding: 6px;
    padding-bottom: 10px;
-   cursor: pointer;
    transition: background-color 150ms, color 150ms, opacity 150ms, box-shadow 150ms;
 }
 
@@ -102,12 +108,7 @@ body > main > nav > ul > li > button.delete {
    color: var(--theme-delete);
    font-weight: bold;
    font-size: 1.2rem;
-   border: none;
-   background: none;
-   border-radius: 100%;
    height: 44px;
-   aspect-ratio: 1;
-   cursor: pointer;
    opacity: 0;
    transition: opacity 150ms, background-color 150ms, color 150ms;
    padding-bottom: 2px;
@@ -140,7 +141,6 @@ body > main > nav > ul > li .project {
    text-align: start;
    border: none;
    background: none;
-   cursor: pointer;
    color: rgb(120, 120, 120);
    padding: 8px 16px;
    border-radius: 16px;
@@ -198,7 +198,6 @@ body > main > nav > ul > li .project.selected::selection {
 }
 
 body > main > nav > ul > li > form > input.project.selected {
-   cursor: text;
    transition: box-shadow 0ms;
 }
 
@@ -252,12 +251,7 @@ body > main > ul.tasks > li.task > .actions > button.complete {
    color: var(--theme-complete);
    font-weight: bold;
    font-size: 1.2rem;
-   border: none;
-   background: none;
-   border-radius: 100%;
    height: 36px;
-   aspect-ratio: 1;
-   cursor: pointer;
    opacity: 0;
    transition: opacity 150ms, background-color 150ms, color 150ms;
    padding-bottom: 2px;
@@ -284,9 +278,6 @@ body > main > ul.tasks > li.add-task {
 }
 
 body > main > ul.tasks > li.add-task > button {
-   background: none;
-   border: none;
-   cursor: pointer;
    width: 100%;
    transition: background-color 150ms, opacity 150ms;
    border-radius: inherit;
