--- a/src/styles.css
+++ b/src/styles.css
@@ -293,29 +293,32 @@ body > main > ul.tasks > li.task > .actions {
    gap: 12px;
 }
 
+body > main > ul.tasks > li.task > .actions > button {
+   opacity: 0;
+   height: 36px;
+   transition: opacity 150ms, background-color 150ms, color 150ms;
+}
+
+body > main > ul.tasks > li.task:hover > .actions > button,
+body > main > ul.tasks > li.task:focus-within > .actions > button {
+   opacity: 80%;
+}
+
+body > main > ul.tasks > li.task > .actions > button:active {
+   opacity: 50%;
+}
+
 body > main > ul.tasks > li.task > .actions > button.complete {
    color: var(--theme-complete);
    font-weight: bold;
    font-size: 1.2rem;
-   height: 36px;
-   opacity: 0;
-   transition: opacity 150ms, background-color 150ms, color 150ms;
    padding-bottom: 2px;
-}
-
-body > main > ul.tasks > li.task:hover > .actions > button.complete,
-body > main > ul.tasks > li.task:focus-within > .actions > button.complete {
-   opacity: 80%;
 }
 
 body > main > ul.tasks > li.task > .actions > button.complete:hover,
 body > main > ul.tasks > li.task > .actions > button.complete:focus-visible {
    color: var(--theme-complete-text);
    background: var(--theme-complete);
-}
-
-body > main > ul.tasks > li.task > .actions > button.complete:active {
-   opacity: 50%;
 }
 
 body > main > ul.tasks > li.add-task {
