Reused unused tasks style to hide empty tasks for transition

--- a/src/styles.css
+++ b/src/styles.css
@@ -214,7 +214,8 @@ body > main > ul.tasks {
    transition: opacity 200ms;
 }
 
-body > main > ul.tasks.hidden {
+body > main > ul.tasks.hidden,
+body > main > ul.tasks:empty {
    transition: opacity 10ms;
    opacity: 0%;
 }
